# piespector

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
src/piespector/: __init__.py  __main__.py  app.py  auth_provider.py  commands.py  formatting.py  history.py  http_client.py  persistence.py  placeholders.py  rendering.py  request_builder.py  request_executor.py  screen_refresh.py  scrollbars.py  search.py  secrets.py  state.py  state_core.py  state_env.py  state_history.py  state_home.py  state_workspace.py  storage.py  ui.py
src/piespector/domain/: __init__.py  editor.py  history.py  http.py  modes.py  requests.py  workspace.py
src/piespector/interactions/: __init__.py  controller.py  keys.py
src/piespector/screens/: __init__.py  base.py
src/piespector/screens/env/: __init__.py  controller.py  render.py  screen.py
src/piespector/screens/help/: __init__.py  render.py
src/piespector/storage/: __init__.py  paths.py  serializer.py
src/piespector/ui/: __init__.py  command_line_content.py  command_palette.py  css.py  footer.py  help_content.py  help_panel.py  input.py  jump_overlay.py  jumper.py  overlays.py  rendering_helpers.py  rich_styles.py  select.py  selection.py  session_state.py  status_content.py  status_hints.py  syntax_theme.py  themes.py
src/piespector/widget/tree/: state.py  (+3 more)
tests/: test_app.py  test_app_ui.py  test_auth.py  test_body.py  test_commands.py  test_http_client_misc.py  test_main.py  test_rendering_misc.py  test_secrets.py  test_state_workspace.py  test_storage.py  test_utils.py
(+43 files in other folders)
